--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prepare": "echo ok"
+    "prepare": "tsc"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.72",
+    "@types/node": "^14.14.31",
+    "typescript": "^4.2.2"
+  }
 }
